# shapefile-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: CI.yml
example/print-content/: Cargo.toml
example/print-content/src/: main.rs
examples/: create.rs  print-content.rs
examples/geotype-example/: Cargo.toml  README.md
examples/geotype-example/src/: main.rs
examples/geotype-example/tests/data/: points.shp  points.shx  polygons.dbf  polygons.shp  polygons.shx
examples/print-content/: Cargo.toml
examples/print-content/src/: main.rs
examples/read-polygon-shapefile-and-convert-to-geo-types/: Cargo.toml
examples/read-polygon-shapefile-and-convert-to-geo-types/src/: main.rs
examples/read-polygon-shapefile-and-convert-to-geo-types/tests/data/: points.dbf
src/: geo_traits_impl.rs  header.rs  lib.rs  reader.rs  record.rs  writer.rs
src/record/: bbox.rs  io.rs  macros.rs  mod.rs  multipatch.rs  multipoint.rs  point.rs  poly.rs  polygon.rs  polyline.rs  traits.rs
tests/: read_tests.rs  read_with_index.rs  test_geo_types.rs  testfiles.rs  write_tests.rs
tests/data/: file_cp936.dbf  multipatch.shp
