[package]
name = "shapefile"
version = "0.5.0"
authors = ["tmontaigu <thomas.montaigu@laposte.net>"]
description = "Read & Write shapefiles in Rust"
license = "MIT"
readme = "README.md"
keywords = ["shapefile"]
homepage = "https://github.com/tmontaigu/shapefile-rs"
repository = "https://github.com/tmontaigu/shapefile-rs"
exclude = ["tests/data/*"]
edition = "2021"

[dependencies]
byteorder = "1.2.7"
dbase = "0.4.0"
geo-types = {version = ">=0.4.0, <0.8.0", optional = true}


[package.metadata.docs.rs]
features = ["geo-types"]
