[package]
name = "read-polygon-shapefile-and-convert-to-geo-types"
version = "0.1.0"
authors = ["Michel Kuhlmann <michel.kuhlmann@tkconsult.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shapefile = {version = "0.3.0", features = ["geo-types"]}
geo = "0.18.0"
